# hw13_FastAPI

./: alembic.ini  docker-compose.yml  main.py  pyproject.docs.toml  pyproject.toml  requirements.txt
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
migrations/versions/: 52ff12008c8d_init.py  a3046e9dcc6e_init.py  cd970ea9494b_init.py
src/: schemas.py
src/config/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py  emal.py
tests/: conftest.py  test_main.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
